Tue Aug 14 23:28:07 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * tests/ACE_Init_Test.h:
        * tests/ACE_Init_TestDlg.h:
        * tests/Based_Pointer_Test.cpp:
        * tests/Basic_Types_Test.cpp:
        * tests/Bug_2815_Regression_Test.cpp:
        * tests/Bug_2820_Regression_Test.cpp:
        * tests/Config_Test.h:
        * tests/Config_Test.cpp:
        * tests/Max_Default_Port_Test.cpp:
        * tests/Mem_Map_Test.cpp:
        * tests/Notification_Queue_Unit_Test.cpp:
        * tests/QtReactor_Test.h:
        * tests/QtReactor_Test.cpp:
        * tests/Reactor_Notify_Test.cpp:
        * tests/SOCK_Dgram_Test.cpp:
        * tests/SV_Shared_Memory_Test.cpp:
        * tests/Signal_Test.cpp:
        * tests/Thread_Pool_Reactor_Test.cpp:
        * tests/Vector_Test.cpp:
          Untabify.

Tue Aug 14 22:39:56 UTC 2007  Steve Huston  <shuston@riverace.com>

        * configure.ac: Run the epoll_create() check; don't just link it.
          RHEL 3 can link it but what ACE expects generates a run-time error.

Tue Aug 14 19:11:06 UTC 2007  Phil Mesnier  <mesnier_p@ociweb.com>

        * protocols/ace/HTBP/HTBP_Channel.cpp:
        * protocols/ace/HTBP/HTBP_Environment.cpp:
        * protocols/ace/HTBP/HTBP_ID_Requestor.cpp:
        * protocols/ace/HTBP/HTBP_Inside_Squid_Filter.cpp:
        * protocols/ace/HTBP/HTBP_Notifier.cpp:
        * protocols/ace/HTBP/HTBP_Outside_Squid_Filter.cpp:
        * protocols/ace/HTBP/HTBP_Stream.cpp:

          Clean up the debug output.

        * protocols/tests/HTBP/Reactor_Tests/client.cpp:
        * protocols/tests/HTBP/Reactor_Tests/run_test.pl:
        * protocols/tests/HTBP/Reactor_Tests/server.cpp:

        * protocols/tests/HTBP/Send_Large_Msg/client.cpp:
        * protocols/tests/HTBP/Send_Large_Msg/run_test.pl:
        * protocols/tests/HTBP/Send_Large_Msg/server.cpp:

        * protocols/tests/HTBP/Send_Recv_Tests/SendRecv_Test.cpp: