@@ -22,16 +22,18 @@
 # endif /* ACE_HAS_AIO_CALLS */
 #endif /* _POSIX_ASYNCHRONOUS_IO */
 
-#if defined(_POSIX_SEMAPHORES) && (_POSIX_SEMAPHORES-0 != -1 )
-# if !defined(ACE_HAS_POSIX_SEM)
-#  define ACE_HAS_POSIX_SEM
+#if !defined (ACE_MT_SAFE) || (ACE_MT_SAFE != 0)
+# if defined(_POSIX_SEMAPHORES) && (_POSIX_SEMAPHORES-0 != -1 )
+#  if !defined(ACE_HAS_POSIX_SEM)
+#   define ACE_HAS_POSIX_SEM
+#  endif /* ACE_HAS_POSIX_SEM */
+#  if defined(ACE_HAS_POSIX_SEM)
+#   if !defined (ACE_HAS_POSIX_SEM_TIMEOUT) && defined (_POSIX_TIMEOUTS)
+#     define ACE_HAS_POSIX_SEM_TIMEOUT
+#   endif /* ACE_HAS_POSIX_SEM_TIMEOUT && _POSIX_TIMEOUTS */
+#  endif /* ACE_HAS_POSIX_SEM */
 # endif /* ACE_HAS_POSIX_SEM */
-# if defined(ACE_HAS_POSIX_SEM)
-#  if !defined (ACE_HAS_POSIX_SEM_TIMEOUT) && defined (_POSIX_TIMEOUTS)
-#    define ACE_HAS_POSIX_SEM_TIMEOUT
-#  endif /* ACE_HAS_POSIX_SEM_TIMEOUT && _POSIX_TIMEOUTS */
-# endif /* ACE_HAS_POSIX_SEM */
-#endif /* ACE_HAS_POSIX_SEM */
+#endif /* !ACE_MT_SAFE */
 
 #if defined(_POSIX_SHARED_MEMORY_OBJECTS) && (_POSIX_SHARED_MEMORY_OBJECTS-0 != -1 )
 # if !defined(ACE_HAS_SHM_OPEN)
